# circuit_checker_v3

./: .dockerignore  CLAUDE.MD  Dockerfile  README.MD  pyproject.toml  report.html  rules_example.yaml  start.sh
.claude/: settings.json
backend/: main.py  pyproject.toml
backend/checker/: rule_checker.py  rule_loader.py
backend/parsers/: asc_parser.py  bom_parser.py  ic_spec_parser.py  regpair_parser.py  spec_parser.py
circuit_netlist_and_BOM/: NA0P6NOA_TEST_ONLY.BOM  NA0P6NOA_TEST_ONLY.asc  TDM24544.yaml  TDM24544_update.yaml  XDPE1E496A.yaml  XDPE1E496A_update.yaml
frontend/: package-lock.json  package.json
frontend/src/: App.vue  api.js  i18n.js  style.css
frontend/src/components/: FileUpload.vue  IcSpecEditor.vue  RailSpecEditor.vue  ResultsDisplay.vue  RuleMapping.vue  SpecEditor.vue  YamlGenerator.vue
frontend/src/stores/: appStore.js
src/: cli.py  main.py
src/backend/: __init__.py  parser.py  reporter.py  rule_evaluator.py
templates/: base.html.j2  generator.html.j2  index.html.j2  report.html.j2
test_files/821028_DelawareCity_GNR-SP_Design_Rev1_0/: 821028_DELAWARECITY_GNR-SP_DESIGN_REV1_0.BOM  821028_DELAWARECITY_GNR-SP_DESIGN_REV1_0.asc
test_files/TDA38806/: MARIANA_TDA38806.BOM  MARIANA_TDA38806.asc  MARIANA_TDA38806_20260327_123022.html  P1V8_AUX.spec  P3V3_AUX.spec  TDA38806 (1).yaml  TDA38806.spec  TDA38806.yaml
test_files/tda38725a/: K2V6_TDA38725A_0V9_0x18h_20231222-0xC35C04DE.txt  K2V6_TDA38725A_0V9_0x18h_20231222-0xC35C04DE_regpair.txt
tests/: test_parser.py  test_reporter.py  test_rules.py
tools/: raw_to_regpair.py
